fixed navbar to stretch across screen

--- a/client/public/general.css
+++ b/client/public/general.css
@@ -724,3 +724,30 @@ and (max-device-width : 1024px)  {
   max-width: 200px;
   align-self: center;
 }
+.profile-container {
+    margin: 20px 20px 20px 20px;
+    border: 5px solid black;
+    overflow: auto;
+    padding: 10px, 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+.profile-thumb {
+    float: left;
+    margin-top: 15px;
+}
+.profile-thumb img {
+    display: block;
+    margin-top: 15px;
+}
+.profile-content {
+    margin-left: 210px;
+}
+.profile-title {
+    font-weight: bold;
+    font-size: 200%;
+}
+.modal-pic {
+  width: 50%;
+}
